--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,5 @@ temp
 /neb.sublime-project
 /Examples/generative2.nebp
 /Examples/generative1.nebp
+/nprocessing.sublime-workspace
+/nprocessing.sublime-project
