--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,8 @@ temp
 /_old
 /nprocessing.sublime-workspace
 /nprocessing.sublime-project
+/Examples/flocking.npp
+/Examples/generative1.npp
+/Examples/generative2.npp
+/Examples/gol.npp
+/Examples/lsys.npp
