Fixed some naming.

--- a/App.config
+++ b/App.config
@@ -11,11 +11,11 @@
         </extensions>
         <targets async="true">
             <!-- Debug log file target - path matches the value in the app. -->
-            <target name="logFile" xsi:type="File" fileName="${specialfolder:folder=LocalApplicationData}/Nebulator/log.txt" layout="${date:format=yyyy\-MM\-dd HH\:mm\:ss.fff} ${pad:padding=5:padCharacter=_:inner=${level:uppercase=true}} ${message}" />
+            <target name="logFile" xsi:type="File" fileName="${specialfolder:folder=LocalApplicationData}/NProcessing/log.txt" layout="${date:format=yyyy\-MM\-dd HH\:mm\:ss.fff} ${pad:padding=5:padCharacter=_:inner=${level:uppercase=true}} ${message}" />
             <!-- <target
                 name="logFile"
                 xsi:type="File"
-                fileName="${specialfolder:folder=LocalApplicationData}/Nebulator/log.txt"
+                fileName="${specialfolder:folder=LocalApplicationData}/NProcessing/log.txt"
                 layout="${date:format=yyyy\-MM\-dd HH\:mm\:ss.fff}|${pad:padding=5:padCharacter=_:inner=${level:uppercase=true}}|${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false}[${threadid}]|${message}"
             /> -->
             <!-- Custom user notification target -->
