Separated pure processing stuff from the nebulator project. Apples != oranges.

--- a/App.config
+++ b/App.config
@@ -7,17 +7,11 @@
     <nlog throwExceptions="false" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
         <!-- Identify NLog extensions -->
         <extensions>
-            <add assembly="Nebulator.Common" />
+            <add assembly="NProcessing" />
         </extensions>
         <targets async="true">
             <!-- Debug log file target - path matches the value in the app. -->
             <target name="logFile" xsi:type="File" fileName="${specialfolder:folder=LocalApplicationData}/NProcessing/log.txt" layout="${date:format=yyyy\-MM\-dd HH\:mm\:ss.fff} ${pad:padding=5:padCharacter=_:inner=${level:uppercase=true}} ${message}" />
-            <!-- <target
-                name="logFile"
-                xsi:type="File"
-                fileName="${specialfolder:folder=LocalApplicationData}/NProcessing/log.txt"
-                layout="${date:format=yyyy\-MM\-dd HH\:mm\:ss.fff}|${pad:padding=5:padCharacter=_:inner=${level:uppercase=true}}|${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false}[${threadid}]|${message}"
-            /> -->
             <!-- Custom user notification target -->
             <target name="clientWindow" xsi:type="ClientWindow" />
         </targets>
