--- a/NProcessing.csproj
+++ b/NProcessing.csproj
@@ -35,17 +35,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nebulator.Common">
-      <HintPath>lib\Nebulator.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Nebulator.Script">
-      <HintPath>lib\Nebulator.Script.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>packages\NLog.4.5.11\lib\net45\NLog.dll</HintPath>
+      <HintPath>packages\NLog.4.6.0\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="SkiaSharp, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <HintPath>packages\SkiaSharp.1.68.0\lib\net45\SkiaSharp.dll</HintPath>
@@ -77,14 +71,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <!-- <Compile Include="Compiler.cs" /> -->
+    <Compile Include="Logging.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MmTimerEx.cs" />
+    <Compile Include="MultiFileWatcher.cs" />
+    <!-- <Compile Include="NpClasses.cs" /> -->
+    <!-- <Compile Include="NpScript.cs" /> -->
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <!-- <Compile Include="PVector.cs" /> -->
+    <!-- <Compile Include="ScriptCore.cs" /> -->
+    <!--     <Compile Include="Surface.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Surface.Designer.cs" />
+ -->
+    <Compile Include="UserSettings.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,6 +107,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <!-- <EmbeddedResource Include="Surface.resx" /> -->
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -116,7 +126,7 @@
     <None Include="README.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Resources\Goupil .ico" />
+    <None Include="Resources\Goupil.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\glyphicons-137-cogwheel.png" />
@@ -135,6 +145,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\glyphicons-551-erase.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Script\Script.csproj">
+      <Project>{12428b06-b76a-4906-a9fd-47ad25ab2d37}</Project>
+      <Name>Script</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets" Condition="Exists('packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets')" />
