--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NAudio" version="1.8.5" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NLog" version="4.6.0" targetFramework="net471" />
   <package id="SkiaSharp" version="1.68.0" targetFramework="net471" />
