--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>NProcessing.Script</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
