--- a/App/App.csproj
+++ b/App/App.csproj
@@ -13,7 +13,7 @@
     <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
     <WarningLevel>4</WarningLevel>
     <NoWarn>CS1591;CA1822</NoWarn>
-    <!--<Nullable>enable</Nullable> TODO-->
+    <Nullable>enable</Nullable>
     <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
     <SatelliteResourceLanguages>none</SatelliteResourceLanguages> <!-- en none -->
   </PropertyGroup>
@@ -25,6 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
     <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="SkiaSharp" Version="2.80.3" />
