--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -3,6 +3,22 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+
+
+
+    <AssemblyName>Script</AssemblyName>
+    <Deterministic>False</Deterministic>
+    <Version>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\..\version.txt"))</Version>
+    <Description>NProcessing script</Description>
+    <Copyright>MIT License</Copyright>
+    <OutputPath>bin\</OutputPath>
+    <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>CS1591;CA1822;IDE1006</NoWarn>
+    <Nullable>enable</Nullable>
+    <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
+    <SatelliteResourceLanguages>none</SatelliteResourceLanguages> <!-- en none -->
+
   </PropertyGroup>
 
   <ItemGroup>
