--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -3,10 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-
-
-
-    <AssemblyName>Script</AssemblyName>
+    <AssemblyName>NProcessing.Script</AssemblyName>
     <Deterministic>False</Deterministic>
     <Version>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\..\version.txt"))</Version>
     <Description>NProcessing script</Description>
@@ -18,7 +15,6 @@
     <Nullable>enable</Nullable>
     <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
     <SatelliteResourceLanguages>none</SatelliteResourceLanguages> <!-- en none -->
-
   </PropertyGroup>
 
   <ItemGroup>
