--- a/App/App.csproj
+++ b/App/App.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ScriptCompiler\ScriptCompiler.csproj" />
     <ProjectReference Include="..\Script\Script.csproj" />
   </ItemGroup>
 
