--- a/App/App.csproj
+++ b/App/App.csproj
@@ -32,13 +32,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ScriptCompiler\ScriptCompiler.csproj" />
     <ProjectReference Include="..\Script\Script.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="NBagOfTricks">
       <HintPath>..\lib\NBagOfTricks.dll</HintPath>
+    </Reference>
+    <Reference Include="NBagOfTricks.ScriptCompiler">
+      <HintPath>..\lib\NBagOfTricks.ScriptCompiler.dll</HintPath>
     </Reference>
     <Reference Include="NBagOfTricks.UI">
       <HintPath>..\lib\NBagOfTricks.UI.dll</HintPath>
