--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -26,8 +26,8 @@
     <Reference Include="NBagOfTricks">
       <HintPath>..\lib\NBagOfTricks.dll</HintPath>
     </Reference>
-    <Reference Include="NBagOfTricks.UI">
-      <HintPath>..\lib\NBagOfTricks.UI.dll</HintPath>
+    <Reference Include="NBagOfUis">
+      <HintPath>..\lib\NBagOfUis.dll</HintPath>
     </Reference>
   </ItemGroup>
 
