--- a/App/App.csproj
+++ b/App/App.csproj
@@ -45,11 +45,8 @@
     <Reference Include="NBagOfTricks">
       <HintPath>..\lib\NBagOfTricks.dll</HintPath>
     </Reference>
-    <Reference Include="NBagOfTricks.ScriptCompiler">
-      <HintPath>..\lib\NBagOfTricks.ScriptCompiler.dll</HintPath>
-    </Reference>
-    <Reference Include="NBagOfTricks.UI">
-      <HintPath>..\lib\NBagOfTricks.UI.dll</HintPath>
+    <Reference Include="NBagOfUis">
+      <HintPath>..\lib\NBagOfUis.dll</HintPath>
     </Reference>
   </ItemGroup>
 
