--- a/App/App.csproj
+++ b/App/App.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="SkiaSharp" Version="2.80.3" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
