--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="SkiaSharp" Version="2.80.3" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
