--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -5,7 +5,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>NProcessing.Script</AssemblyName>
     <Deterministic>False</Deterministic>
-    <Version>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)\..\version.txt"))</Version>
+    <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version> 
     <Description>NProcessing script</Description>
     <Copyright>MIT License</Copyright>
     <OutputPath>bin\</OutputPath>
