--- a/App/App.csproj
+++ b/App/App.csproj
@@ -19,12 +19,6 @@
     <ApplicationIcon>Resources\Goupil.ico</ApplicationIcon> <!-- en none -->
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="..\NProcessing.md.html" Link="NProcessing.md.html">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
   <!-- <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningsAsErrors>NU1605 </WarningsAsErrors>
     <DebugType>portable</DebugType>
@@ -33,7 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.11.0" />
-    <PackageReference Include="NAudio" Version="2.0.1" />
+    <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="SkiaSharp" Version="2.80.3" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
@@ -44,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="MidiLib">
+      <HintPath>..\lib\MidiLib.dll</HintPath>
+    </Reference>
     <Reference Include="NBagOfTricks">
       <HintPath>..\lib\NBagOfTricks.dll</HintPath>
     </Reference>
