--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -1,35 +1,33 @@
+<?xml version="1.0" ?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyName>NProcessing.Script</AssemblyName>
-    <Deterministic>False</Deterministic>
-    <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version> 
-    <Description>NProcessing script</Description>
-    <Copyright>MIT License</Copyright>
-    <OutputPath>bin\</OutputPath>
-    <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>CS1591;CA1822;IDE1006</NoWarn>
-    <Nullable>enable</Nullable>
-    <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
-    <SatelliteResourceLanguages>none</SatelliteResourceLanguages> <!-- en none -->
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.11" />
-    <PackageReference Include="SkiaSharp" Version="2.80.3" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="NBagOfTricks">
-      <HintPath>..\lib\NBagOfTricks.dll</HintPath>
-    </Reference>
-    <Reference Include="NBagOfUis">
-      <HintPath>..\lib\NBagOfUis.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
+    <PropertyGroup>
+        <TargetFramework>net5.0-windows</TargetFramework>
+        <UseWindowsForms>true</UseWindowsForms>
+        <AssemblyName>NProcessing.Script</AssemblyName>
+        <Deterministic>False</Deterministic>
+        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Description>NProcessing script</Description>
+        <Copyright>MIT License</Copyright>
+        <OutputPath>bin\</OutputPath>
+        <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
+        <WarningLevel>4</WarningLevel>
+        <!-- <NoWarn>CS1591;CA1822;IDE1006</NoWarn> -->
+        <Nullable>enable</Nullable>
+        <!--<GenerateDocumentationFile>true</GenerateDocumentationFile>-->
+        <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
+        <!-- en none -->
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="NLog" Version="4.7.11"/>
+        <PackageReference Include="SkiaSharp" Version="2.80.3"/>
+        <PackageReference Include="System.Drawing.Common" Version="6.0.0"/>
+    </ItemGroup>
+    <ItemGroup>
+        <Reference Include="NBagOfTricks">
+            <HintPath>..\lib\NBagOfTricks.dll</HintPath>
+        </Reference>
+        <Reference Include="NBagOfUis">
+            <HintPath>..\lib\NBagOfUis.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 </Project>
