--- a/App/App.csproj
+++ b/App/App.csproj
@@ -7,7 +7,7 @@
         <AssemblyName>NProcessing.App</AssemblyName>
         <RootNamespace>NProcessing.App</RootNamespace>
         <Deterministic>False</Deterministic>
-        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Version>1.1.0</Version>
         <Description>NProcessing application</Description>
         <Copyright>MIT License</Copyright>
         <OutputPath>bin\</OutputPath>
