--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -6,7 +6,7 @@
         <AssemblyName>NProcessing.Script</AssemblyName>
         <RootNamespace>NProcessing.Script</RootNamespace>
         <Deterministic>False</Deterministic>
-        <Version>$([System.DateTime]::UtcNow.ToString(yy.MM.dd))</Version>
+        <Version>1.1.0</Version>
         <Description>NProcessing script</Description>
         <Copyright>MIT License</Copyright>
         <OutputPath>bin\</OutputPath>
