Copy outputs to common dir.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -57,4 +57,9 @@
     <ItemGroup>
         <Folder Include="Resources\" />
     </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="copy /Y $(OutputPath)* C:\Dev\bin" />
+    </Target>
+
 </Project>
