--- a/Script/Script.csproj
+++ b/Script/Script.csproj
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+
         <TargetFramework>net8.0-windows</TargetFramework>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
         <UseWindowsForms>true</UseWindowsForms>
+        <OutputPath>bin\</OutputPath>
+
         <AssemblyName>NProcessing.Script</AssemblyName>
         <RootNamespace>NProcessing.Script</RootNamespace>
-        <Deterministic>False</Deterministic>
         <Version>2.0.0</Version>
         <Description>NProcessing script</Description>
         <Copyright>MIT License</Copyright>
-        <OutputPath>bin\</OutputPath>
         <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
         <WarningLevel>4</WarningLevel>
         <NoWarn>CS1591;CA1822;IDE1006</NoWarn> 
@@ -18,10 +20,12 @@
         <SatelliteResourceLanguages>none</SatelliteResourceLanguages>
         <!-- en none -->
     </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="SkiaSharp" Version="2.88.8" />
         <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
+
     <ItemGroup>
         <Reference Include="Ephemera.NBagOfTricks">
             <HintPath>..\lib\Ephemera.NBagOfTricks.dll</HintPath>
@@ -30,4 +34,5 @@
             <HintPath>..\lib\Ephemera.NBagOfUis.dll</HintPath>
         </Reference>
     </ItemGroup>
+
 </Project>
